# grados-hora

./: README.md  app.py  gh-test.py  gh.py  pyproject.toml  requirements.txt
data/: MEX_JAL_Zapopan.766015_TMYx.epw  MEX_VER_Coatzacoalcos.767410_TMYx.epw
