[project]
name = "grados-hora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iertools",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "rsconnect-python>=1.25.2",
    "shiny>=1.4.0",
    "shinywidgets>=0.5.2",
]

[tool.uv.sources]
iertools = { git = "https://github.com/AltamarMx/iertools.git" }
